feat: some play with prototype design pattern